--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,12 @@ description: Just a guy trying to learn how to program!
 
 # List of links in the navigation bar
 navbar-links:
+  Home: "http://ericdsmith.github.io"
   About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-  Home: "http://ericdsmith.github.io"
+
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -49,11 +50,11 @@ author:
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
+  facebook: false
   email: true
-  twitter: true
+  twitter: false
   github: true
-  linkedin: false
+  linkedin: true
   stackoverflow: false
 
 # How to display the link to the website in the footer
