config update and changed title and subtitle of landing page

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ avatar: "/img/avatar-icon.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Eric Smith
   email: "tech.ericsmith@gmail.com"
   facebook: yourname  # eg. daattali
   github: ericdsmith    # eg. daattali
