--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 
 # Output options (more information on Jekyll's site)
 timezone: "America/New_York"
-markdown: kramdown
+markdown: redcarpet
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
