--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,8 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 # Output options (more information on Jekyll's site)
 timezone: "America/New_York"
 markdown: redcarpet
-extensions: [fenced_code_blocks]
+redcarpet:
+    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "with_toc_data", "fenced_code_blocks"]
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
