--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 timezone: "America/New_York"
 markdown: redcarpet
 redcarpet:
-    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "with_toc_data", "fenced_code_blocks"]
+    extensions: ["fenced_code_blocks"]
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
