--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,10 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 
 # Output options (more information on Jekyll's site)
 timezone: "America/New_York"
-markdown: redcarpet
-redcarpet:
-    extensions: ["fenced_code_blocks"]
+markdown: kramdown
+kramdown: 
+  input: GFM
+  syntax_highlighter: rouge
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
