--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,8 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 
 # Output options (more information on Jekyll's site)
 timezone: "America/New_York"
-kramdown:
+markdown: kramdown
+kramdown: 
   input: GFM
   syntax_highlighter: rouge
 permalink: /:year-:month-:day-:title/
