--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,9 @@ url-pretty: ""  # eg. "deanattali.com/beautiful-jekyll"
 
 # Output options (more information on Jekyll's site)
 timezone: "America/New_York"
-markdown: kramdown
-kramdown: 
-  input: GFM
-  syntax_highlighter: rouge
+markdown: redcarpet
+redcarpet:
+  extensions: ['fenced_code_blocks']
 permalink: /:year-:month-:day-:title/
 paginate: 5
 
